Pequeños cambios en Stock en Vehiculo Fragment
Se ha cambiado el nombre de la clase java y del xml, y también la pestaña en el MainActivityRepartidores

--- a/app/src/main/res/layout/fragment_stock_en_vehiculo.xml
+++ b/app/src/main/res/layout/fragment_stock_en_vehiculo.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:weightSum="1"
 
-    tools:context="com.example.jumpi.repartidores_aplication.StockDisponibleFragment">
+    tools:context="com.example.jumpi.repartidores_aplication.StockEnVehiculoFragment">
 
 
 
