--- a/app/src/main/res/layout/repartidores_activity_main.xml
+++ b/app/src/main/res/layout/repartidores_activity_main.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Stock Disponible" />
+                android:text="Stock En Vehículo" />
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
