--- a/app/src/main/res/layout/activity_editar_clientes.xml
+++ b/app/src/main/res/layout/activity_editar_clientes.xml
@@ -6,26 +6,27 @@
     xmlns:tools="http://schemas.android.com/tools"
 
 
-    android:id="@+id/agregar_clientes_id"
+    android:id="@+id/llh_editar_clientes_id"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFF"
     android:orientation="horizontal"
+    android:background="@mipmap/background_editar_cliente_repartidor"
 
     tools:context=".EditarClientes">
 
 
 
 
+
     <ScrollView
+        android:id="@+id/sv_editar_cliente"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
 
-
-
-
         <LinearLayout
+
+            android:id="@+id/llv_padre_ec"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
@@ -34,24 +35,29 @@
             android:orientation="vertical">
 
             <LinearLayout
+
+                android:id="@+id/llh_img_cliente_editar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:orientation="horizontal">
 
 
                 <ImageView
-                    android:id="@+id/img_cliente_agregar"
+                    android:id="@+id/img_cliente_editar"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:layout_marginRight="150dp"
                     android:layout_marginBottom="10dp"
-                    android:src="@mipmap/ic_img_nuevo_cliente_repartidor" />
+                    android:src="@mipmap/img_editar_cliente" />
 
 
             </LinearLayout>
 
 
             <LinearLayout
+
+                android:id="@+id/llv_padre_formulario_ec"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -61,18 +67,20 @@
 
                 <LinearLayout
 
+                    android:id="@+id/llv_apellido_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
                     <TextView
+
+                        android:id="@+id/tv_apellido_ec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="APELLIDO"
-                        android:textColor="#000"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
+                        android:textColor="#FFFF"
+                        android:textSize="24sp"/>
 
 
                 </LinearLayout>
@@ -80,7 +88,7 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_apellido"
+                    android:id="@+id/llh_apellido_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -88,12 +96,12 @@
 
                     <EditText
 
-                        android:id="@+id/apellido_cliente_agregar"
+                        android:id="@+id/et_apellido_cliente_editar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:inputType="textMultiLine"
-                        android:textColor="#1565c0"
+                        android:textColor="#FFFF"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -102,18 +110,20 @@
 
                 <LinearLayout
 
+                    android:id="@+id/llv_nombre_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
                     <TextView
+
+                        android:id="@+id/tv_nombre_ec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="NOMBRE"
-                        android:textColor="#000"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
+                        android:textColor="#FFFF"
+                        android:textSize="24sp"/>
 
 
                 </LinearLayout>
@@ -121,19 +131,19 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_nombre"
+                    android:id="@+id/llh_nombre_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:orientation="horizontal">
 
                     <EditText
-                        android:id="@+id/nombre_cliente_agregar"
+                        android:id="@+id/et_nombre_cliente_editar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:inputType="textMultiLine"
-                        android:textColor="#1565c0"
+                        android:textColor="#FFFF"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -142,18 +152,20 @@
 
                 <LinearLayout
 
+                    android:id="@+id/llv_direccion_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
                     <TextView
+
+                        android:id="@+id/tv_direccion_ec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="DIRECCIÓN"
-                        android:textColor="#000"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
+                        android:textColor="#FFFF"
+                        android:textSize="24sp" />
 
 
                 </LinearLayout>
@@ -161,7 +173,7 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_direccion"
+                    android:id="@+id/llh_direccion_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -169,13 +181,13 @@
 
 
                     <EditText
-                        android:id="@+id/direccion_cliente_agregar"
+                        android:id="@+id/et_direccion_cliente_editar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
                         android:gravity="center|left"
                         android:inputType="textMultiLine"
-                        android:textColor="#1565c0"
+                        android:textColor="#FFFF"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -184,18 +196,20 @@
 
                 <LinearLayout
 
+                    android:id="@+id/llv_barrio_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
                     <TextView
+
+                        android:id="@+id/tv_barrio_ec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="BARRIO"
-                        android:textColor="#000"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
+                        android:textColor="#FFFF"
+                        android:textSize="24sp"/>
 
 
                 </LinearLayout>
@@ -203,19 +217,20 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_barrio"
+                    android:id="@+id/llh_barrio_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:orientation="horizontal">
 
                     <EditText
-                        android:id="@+id/barrio_cliente_agregar"
+
+                        android:id="@+id/et_barrio_cliente_editar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:inputType="textMultiLine"
-                        android:textColor="#1565c0"
+                        android:textColor="#FFFF"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -224,18 +239,20 @@
 
                 <LinearLayout
 
+                    android:id="@+id/llv_telefono_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
                     <TextView
+
+                        android:id="@+id/tv_telefono_ec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="TELÉFONO"
-                        android:textColor="#000"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
+                        android:textColor="#FFFF"
+                        android:textSize="24sp"/>
 
 
                 </LinearLayout>
@@ -243,7 +260,7 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_telefono"
+                    android:id="@+id/llh_telefono_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -251,12 +268,12 @@
 
 
                     <EditText
-                        android:id="@+id/telefono_cliente_agregar"
+                        android:id="@+id/et_telefono_cliente_editar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:inputType="textMultiLine|number"
-                        android:textColor="#1565c0"
+                        android:textColor="#FFFF"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -266,18 +283,20 @@
 
                 <LinearLayout
 
+                    android:id="@+id/llv_correo_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
                     <TextView
+
+                        android:id="@+id/tv_correo_ec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="CORREO"
-                        android:textColor="#000"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
+                        android:textColor="#FFFF"
+                        android:textSize="24sp"/>
 
 
                 </LinearLayout>
@@ -285,7 +304,7 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_correo"
+                    android:id="@+id/llh_correo_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -293,12 +312,12 @@
 
 
                     <EditText
-                        android:id="@+id/correo_cliente_agregar"
+                        android:id="@+id/et_correo_cliente_editar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:inputType="textMultiLine|textEmailAddress"
-                        android:textColor="#1565c0"
+                        android:textColor="#FFFF"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -308,18 +327,20 @@
 
                 <LinearLayout
 
+                    android:id="@+id/llv_dni_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
                     <TextView
+
+                        android:id="@+id/tv_dni_ec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="DNI"
-                        android:textColor="#000"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
+                        android:textColor="#FFFF"
+                        android:textSize="24sp"/>
 
 
                 </LinearLayout>
@@ -327,20 +348,21 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_dni"
+                    android:id="@+id/llh_dni_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:orientation="horizontal">
 
                     <EditText
-                        android:id="@+id/dni_cliente_agregar"
+
+                        android:id="@+id/et_dni_cliente_editar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center|left"
                         android:inputType="number"
                         android:maxLength="8"
-                        android:textColor="#1565c0"
+                        android:textColor="#FFFF"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -349,18 +371,20 @@
 
                 <LinearLayout
 
+                    android:id="@+id/llv_referencia_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
                     <TextView
+
+                        android:id="@+id/tv_referencia_ec"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="REFERENCIA"
-                        android:textColor="#000"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
+                        android:textColor="#FFFF"
+                        android:textSize="24sp"/>
 
 
                 </LinearLayout>
@@ -368,7 +392,7 @@
 
                 <LinearLayout
 
-                    android:id="@+id/llh_referencia"
+                    android:id="@+id/llh_referencia_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
@@ -376,13 +400,13 @@
 
 
                     <EditText
-                        android:id="@+id/referencia_cliente_agregar"
+                        android:id="@+id/et_referencia_cliente_editar"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:gravity="center|left"
                         android:inputType="textMultiLine"
-                        android:textColor="#1565c0"
+                        android:textColor="#FFFF"
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
@@ -392,6 +416,7 @@
 
                 <LinearLayout
 
+                    android:id="@+id/llh_button_guardar_cambios_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -401,14 +426,13 @@
 
                     <Button
 
-                        android:id="@+id/button_agregar_AC"
+                        android:id="@+id/button_guardar_cambios_ec"
                         android:layout_width="match_parent"
                         android:layout_height="60dp"
                         android:layout_margin="@dimen/appbar_padding_top"
                         android:layout_marginTop="10dp"
-                        android:background="@drawable/btn_borde_redondeado"
-                        android:backgroundTint="#1565c0"
-                        android:text="CONFIRMAR"
+                        android:background="@drawable/btn_guardar_cambios_borde_blanco"
+                        android:text="GUARDAR CAMBIOS"
                         android:textColor="#FFFF"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -419,6 +443,7 @@
 
                 <LinearLayout
 
+                    android:id="@+id/llh_btn_cancelar_ec"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -427,15 +452,15 @@
 
 
                     <Button
-                        android:id="@+id/button_cancelar_AC"
+                        android:id="@+id/button_cancelar_ec"
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/appbar_padding_top"
                         android:layout_marginTop="10dp"
-                        android:background="@drawable/btn_borde_redondeado"
-                        android:backgroundTint="#283593"
+                        android:background="@drawable/btn_borde_redondeado_blanco_sin_color_fondo"
                         android:text="CANCELAR"
                         android:textColor="#FFFF"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
 
