--- a/app/src/main/res/menu/menu_second_.xml
+++ b/app/src/main/res/menu/menu_second_.xml
@@ -5,9 +5,9 @@
 
 
     <item
-        android:id="@+id/action_settings_second"
+        android:id="@+id/action_erep"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_entrega_retiro_envases_patrocinio"
         app:showAsAction="never" />
 
 
