--- a/app/src/main/res/layout/nueva_entrega_retiro_patrocinio.xml
+++ b/app/src/main/res/layout/nueva_entrega_retiro_patrocinio.xml
@@ -2,6 +2,7 @@
 <LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
 
     android:id="@+id/parent_layout_vertical_erep"
     android:layout_width="match_parent"
@@ -36,7 +37,6 @@
                     android:id="@+id/layout_horizontal_primer_tupla_erep"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#ef6c00"
                     android:orientation="horizontal">
 
 
@@ -44,6 +44,10 @@
                         android:id="@+id/vuelta_erep"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginRight="2dp"
+                        android:background="#ef6c00"
                         android:gravity="bottom|center"
                         android:text="Vuelta N°:"
                         android:textColor="@android:color/background_light"
@@ -57,10 +61,13 @@
                 <!--#################################################-->
 
 
+
                 <LinearLayout
                     android:id="@+id/layout_horizontal_segunda_tupla_erep"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="2dp"
                     android:background="#ff9800"
                     android:orientation="horizontal"
                     android:weightSum="2">
@@ -74,7 +81,10 @@
                         android:gravity="center"
                         android:text="Artículos"
                         android:textColor="#FFFF"
-                        android:textSize="15sp" />
+                        android:textSize="20sp" />
+
+
+
 
 
                     <ImageView
@@ -84,15 +94,17 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_carga" />
 
+
                     <TextView
+
+                        android:layout_weight="1"
                         android:id="@+id/entrega_erep"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:gravity="center|left"
                         android:text="Entrega"
                         android:textColor="#FFFF"
-                        android:textSize="15sp" />
+                        android:textSize="20sp" />
 
 
                     <ImageView
@@ -102,23 +114,22 @@
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_descarga" />
 
+
                     <TextView
+
+                        android:layout_weight="1"
                         android:id="@+id/retiro_erep"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:gravity="left"
                         android:text="Retiro"
                         android:textColor="#FFFF"
-                        android:textSize="15sp" />
+                        android:textSize="20sp" />
 
                 </LinearLayout>
 
 
-
                 <!--#######################################################################-->
-
-
 
                 <LinearLayout
 
@@ -127,29 +138,34 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-
                     <LinearLayout
                         android:id="@+id/layout_horizontal_tercera_tupla_erep"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:gravity="center"
                         android:orientation="horizontal"
-                        android:weightSum="1">
+                        android:weightSum="2">
+
+
 
                         <ImageButton
 
                             android:id="@+id/add_art_erep"
-                            android:layout_width="40dp"
+                            android:layout_width="30dp"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:background="@android:color/transparent"
                             android:src="@drawable/ic_add_new_art" />
 
                         <Spinner
 
                             android:id="@+id/sp_art_erep"
-                            android:layout_width="match_parent"
+                            style="@style/Widget.AppCompat.Spinner.DropDown"
+                            android:layout_width="150dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
+                            android:dropDownWidth="wrap_content"
                             android:gravity="center"
+                            android:popupElevation="16dp"
                             android:prompt="@string/title_spinner"
                             android:spinnerMode="dialog">
 
@@ -158,33 +174,36 @@
 
                         <EditText
 
+                            android:layout_weight="1"
                             android:id="@+id/edtx_entrega_erep"
-                            android:layout_width="95dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
                             android:hint="Cantidad"
                             android:imeOptions="actionNext"
                             android:inputType="number" />
+
 
                         <EditText
 
+                            android:layout_weight="1"
                             android:id="@+id/edtx_retiro_erep"
-                            android:layout_width="95dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:focusableInTouchMode="true"
                             android:gravity="center"
                             android:hint="Cantidad"
                             android:imeOptions="actionNext"
                             android:inputType="number" />
 
-                    </LinearLayout>
-
-                </LinearLayout> <!--Fin del "layout_vertical_tercer_tupla_erep"-->
 
 
+                      </LinearLayout>
 
-                <!--#######################################################################-->
 
+                   </LinearLayout> <!--Fin del "layout_vertical_tercer_tupla"-->
+
+
+            <!--#######################################################################-->
 
 
             </LinearLayout> <!--Fin del llv_contenedor_para_bordes_erep-->
@@ -196,5 +215,4 @@
 
 
 
-
-</LinearLayout>
+    </LinearLayout>
