--- a/app/src/main/res/layout/activity_nuevo_responsable_patrocinio.xml
+++ b/app/src/main/res/layout/activity_nuevo_responsable_patrocinio.xml
@@ -13,13 +13,6 @@
 
 
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="#d50000"
-        app:popupTheme="@style/AppTheme.PopupOverlay" />
-
 
 
     <ScrollView
@@ -56,7 +49,7 @@
               android:background="#ff5722"
               android:gravity="center"
               android:text="RESPONSABLE"
-              android:textColor="#000"
+              android:textColor="#FFFF"
               android:textSize="24sp"
               android:textStyle="bold" />
 
@@ -365,31 +358,29 @@
     <!--############################################################## -->
 
 
+      <LinearLayout
 
-    <LinearLayout
-
-        android:id="@+id/llh_datos_evento_formulario_patrocinio"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@color/colorAccent"
-        android:orientation="horizontal">
+          android:id="@+id/llh_datos_evento_formulario_patrocinio"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginBottom="10dp"
+          android:orientation="horizontal">
 
 
-        <TextView
+          <TextView
 
-            android:id="@+id/tv_evento_formulario_patrocinio"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_weight="1"
-            android:background="#ff5722"
-            android:gravity="center"
-            android:text="EVENTO"
-            android:textColor="#000000"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+              android:id="@+id/tv_evento_formulario_patrocinio"
+              android:layout_width="match_parent"
+              android:layout_height="50dp"
+              android:layout_weight="1"
+              android:background="#ff5722"
+              android:gravity="center"
+              android:text="EVENTO"
+              android:textColor="#FFFF"
+              android:textSize="24sp"
+              android:textStyle="bold" />
 
-    </LinearLayout>
+      </LinearLayout>
 
 
       <!--############################################################## -->
